<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DF5DF4D"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="245dp"
        android:layout_height="37dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="145dp"
        android:text="@string/first_number_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="245dp"
        android:layout_height="37dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="145dp"
        android:text="@string/second_number_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="245dp"
        android:layout_height="37dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="145dp"
        android:text="@string/operation_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="245dp"
        android:layout_height="37dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="145dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        style="@style/ButtonStyle"
        android:layout_width="291dp"
        android:layout_height="74dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="58dp"
        android:text="@string/calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="245dp"
        android:layout_height="46dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.666" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="116dp"
        android:layout_height="43dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="33dp"
        android:entries="@array/operations"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>